Logout user with best practice
